# payouts_service_test_task

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
docker-compose/: docker-compose.local.yaml
entrypoints/: entrypoint_celery.sh  entrypoint_http_api.sh  entrypoint_migrations.sh
src/config/: celery.py  settings.py  urls.py
src/payouts/: deps.py  dtos.py  models.py  publishers.py  tasks.py
src/payouts/api/: serializers.py  urls.py  views.py
src/payouts/interfaces/: __init__.py  payout_message_publisher.py
src/payouts/migrations/: 0001_initial.py
src/payouts/repositories/: payouts_repo.py
src/payouts/use_cases/: __init__.py  create_payout.py  process_new_payout.py
tests/integration/: conftest.py
tests/integration/payouts/: test_publishers.py
tests/integration/payouts/api/views/: test_payouts_view_set.py
tests/unit/: conftest.py
tests/unit/payouts/use_cases/: test_create_payout.py
